# OpenGL-Mandelbrot

./: .gitignore  CMakeLists.txt  TODO.md  readme.md
assets/shaders/: Period_2.ds  Period_2.fs  Period_20.ds  Period_20.fs  Smooth.ds  Smooth.fs  Texture.ds  Texture.fs  dSmooth.fs  dTexture.fs  fShade.fs  fTexture.fs  vertex.vs
config/: cfg.json
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scripts/: from_plt.py  gen_colormap.py
src/: CMakeLists.txt  fShade.fs  main.cpp  period.fs  period_2.fs  shader.hpp  state.hpp  vShade.vs
src/shaders/: double.fs  fShade.fs  fTexture.fs  period_2.fs  period_20.fs
